--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@ionic/react": "^7.7.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "html5-qrcode": "^2.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.11.1",
-    "react-scripts": "5.0.1",
+    "react-icons": "^5.0.1",
+    "react-ionicons": "^4.2.1",
+    "react-scripts": "^5.0.1",
     "recoil": "^0.7.7",
     "sass": "^1.69.5",
-    "sweetalert2": "^11.9.0",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
