--- a/package.json
+++ b/package.json
@@ -3,25 +3,31 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@ionic/react": "^7.7.3",
+    "@mui/material": "^5.15.19",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
-    "axios": "^1.6.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^2.5.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.11.1",
     "react-icons": "^5.0.1",
     "react-ionicons": "^4.2.1",
+    "react-pdf": "^7.7.1",
     "react-scripts": "^5.0.1",
     "recoil": "^0.7.7",
     "sass": "^1.69.5",
