--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.6.0",
+    "html-to-image": "^1.11.11",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^2.5.1",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.4.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -29,6 +33,9 @@
     "react-dropdown-select": "^4.11.1",
     "react-icons": "^5.0.1",
     "react-ionicons": "^4.2.1",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
+    "react-modal": "^3.16.1",
     "react-pdf": "^7.7.1",
     "react-scripts": "^5.0.1",
     "recoil": "^0.7.7",
@@ -63,6 +70,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.23.1"
   }
 }
